--- a/stand/build.gradle
+++ b/stand/build.gradle
@@ -2,6 +2,6 @@ dependencies {
     compile project(":controller")
     compile("com.fasterxml.jackson.module:jackson-module-kotlin:$jackson_module_version")
     compile("org.springframework.boot:spring-boot-starter-web")
-
+    compile("org.springframework.boot:spring-boot-starter-mail")
     testCompile("junit:junit")
 }
