--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-preset-stage-1": "^6.24.1",
     "bootstrap": "^4.0.0",
     "lodash": "^3.10.1",
@@ -43,6 +44,7 @@
     "react-redux": "^4.3.0",
     "react-router": "^2.8.1",
     "redux": "^3.7.2",
-    "redux-form": "^7.2.3"
+    "redux-form": "^7.2.3",
+    "redux-thunk": "^2.2.0"
   }
 }
