--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^0.14.9",
     "react-redux": "^4.3.0",
     "react-router": "^2.8.1",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-form": "^7.2.3",
     "redux-thunk": "^2.2.0"
