--- a/client/package.json
+++ b/client/package.json
@@ -39,11 +39,15 @@
     "babel-preset-stage-1": "^6.24.1",
     "bootstrap": "^4.0.0",
     "lodash": "^3.10.1",
-    "react": "^0.14.9",
-    "react-dom": "^0.14.9",
+    "prop-types": "^15.6.1",
+    "react": "^16.2.0",
+    "react-alert": "^3.4.0",
+    "react-alert-template-basic": "^1.0.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^4.3.0",
-    "react-router": "^2.8.1",
+    "react-router": "^3.2.0",
     "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-form": "^7.2.3",
     "redux-thunk": "^2.2.0"
