--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "less-loader": "^4.0.5",
     "mocha": "^2.5.3",
     "react-addons-test-utils": "^0.14.8",
+    "redux-logger": "^3.0.6",
     "style-loader": "^0.20.2",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.11.1"
