--- a/stand/build.gradle
+++ b/stand/build.gradle
@@ -3,5 +3,8 @@ dependencies {
     compile("com.fasterxml.jackson.module:jackson-module-kotlin:$jackson_module_version")
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-mail")
+
+    compile 'io.jsonwebtoken:jjwt:0.9.0'
+
     testCompile("junit:junit")
 }
