--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "react-redux": "^4.3.0",
     "react-router": "^3.2.0",
     "react-router-dom": "^4.2.2",
+    "react-select": "^1.2.1",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-form": "^7.2.3",
