--- a/stand/build.gradle
+++ b/stand/build.gradle
@@ -5,7 +5,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-mail")
     compile("org.springframework.boot:spring-boot-devtools")
 
-    compile 'io.jsonwebtoken:jjwt:0.9.0'
+    compile("io.jsonwebtoken:jjwt:0.9.0")
 
     testCompile("junit:junit")
 }
