--- a/stand/src/main/resources/application.yml
+++ b/stand/src/main/resources/application.yml
@@ -14,6 +14,10 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: dandibobo537@gmail.com
+  servlet:
+    multipart:
+      max-file-size: 128KB
+      max-request-size: 128KB
 
 server:
   port: 8081
