--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "bootstrap": "^4.0.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^3.10.1",
+    "moment": "^2.21.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-alert": "^3.4.0",
