--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,16 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/node:7.10
-
+      - image: circleci/openjdk:8-jdk
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/mongo:3.4.4
+
+    environment:
+      # Customize the JVM maximum heap limit
+      JVM_OPTS: -Xmx3200m
+      TERM: dumb
 
     working_directory: ~/repo
 
@@ -22,18 +27,18 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "client/package.json" }}
+          - v1-dependencies-{{ checksum "build.gradle" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: yarn install
+      - run: gradle dependencies
 
       - save_cache:
           paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "client/package.json" }}
+            - ~/.gradle
+          key: v1-dependencies-{{ checksum "build.gradle" }}
 
       # run tests!
-      - run: yarn test
+      - run: gradle test
 
 
