Fixing boot repackage in gradle for circle ci

--- a/build.gradle
+++ b/build.gradle
@@ -35,4 +35,6 @@ allprojects {
     dependencies {
         compile "org.jetbrains.kotlin:kotlin-stdlib"
     }
+
+    bootRepackage.enabled = false
 }
