--- a/server/build.gradle
+++ b/server/build.gradle
@@ -7,9 +7,9 @@ dependencies {
     compile("org.springframework.boot:spring-boot-devtools")
 
     compile("io.jsonwebtoken:jjwt:0.9.0")
-    compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
+    compile("org.postgresql:postgresql:9.4-1202-jdbc42")
 
-
-    testCompile("junit:junit")
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile group: 'org.testng', name: 'testng', version: '6.13.1'
+
 }
