--- a/server/build.gradle
+++ b/server/build.gradle
@@ -7,7 +7,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-devtools")
 
     compile("io.jsonwebtoken:jjwt:0.9.0")
-    compile("org.postgresql:postgresql:9.4-1202-jdbc42")
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
+
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile group: 'org.testng', name: 'testng', version: '6.13.1'
