Server. Error handling. Saving user on sing up

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -3,7 +3,12 @@ server:
   spring:
     profiles:
       active: dev
-
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/regsystem
+    username: regsystem
+    password: zhaba12#
+    driver-class-name: org.postgresql.Driver
 ---
 spring:
   profiles: dev
@@ -26,11 +31,6 @@ spring:
     multipart:
       max-file-size: 128KB
       max-request-size: 128KB
-  datasource:
-    url: jdbc:postgresql://localhost:5432/regsystem
-    username: regsystem
-    password: zhaba12#
-    driver-class-name: org.postgresql.Driver
 ---
 spring:
   profiles: pre
