--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -9,9 +9,6 @@ spring:
     username: regsystem
     password: zhaba12#
     driver-class-name: org.postgresql.Driver
----
-spring:
-  profiles: dev
   mail:
     properties:
       mail:
@@ -27,6 +24,18 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: dandibobo537@gmail.com
+frontend:
+  url: http://localhost:8080
+emailPassword: 123
+
+---
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/regsystem
+    username: regsystem
+    password: zhaba12#
+    driver-class-name: org.postgresql.Driver
+  profiles: dev
   servlet:
     multipart:
       max-file-size: 128KB
