--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
     "react-alert": "^3.4.0",
     "react-alert-template-basic": "^1.0.0",
     "react-dom": "^16.2.0",
+    "react-input-mask": "^1.2.2",
     "react-modal": "^3.3.2",
     "react-redux": "^4.3.0",
     "react-router": "^3.2.0",
