--- a/server/build.gradle
+++ b/server/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-mail")
     compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile("org.springframework.boot:spring-boot-devtools")
+    compile("org.springframework.boot:spring-boot-starter-data-redis")
 
     compile("io.jsonwebtoken:jjwt:0.9.0")
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
