--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -26,6 +26,8 @@ spring:
     username: dandibobo537@gmail.com
     frontend:
       url: http://localhost:8080
+#  redis:
+#    host: localhost:6379
 frontend:
   url: http://localhost:8080
 emailPassword: 123
