--- a/server/build.gradle
+++ b/server/build.gradle
@@ -6,6 +6,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile("org.springframework.boot:spring-boot-devtools")
     compile("org.springframework.boot:spring-boot-starter-data-redis")
+    compile("com.google.code.gson:gson:2.8.4")
+
 
     compile("io.jsonwebtoken:jjwt:0.9.0")
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
