--- a/server/build.gradle
+++ b/server/build.gradle
@@ -17,3 +17,7 @@ dependencies {
     testCompile group: 'org.testng', name: 'testng', version: '6.13.1'
 
 }
+
+
+bootJar { enabled = false }
+jar {enabled = true}
