--- a/stand/build.gradle
+++ b/stand/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-mail")
     compile("org.springframework.boot:spring-boot-devtools")
+    compile("org.apache.poi:poi:$apache_poi_version")
 
     compile("io.jsonwebtoken:jjwt:0.9.0")
 
