--- a/server/build.gradle
+++ b/server/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-devtools")
     compile("org.springframework.boot:spring-boot-starter-data-redis")
     compile("com.google.code.gson:gson:2.8.4")
+    compile("org.apache.poi:poi:$apache_poi_version")
 
 
     compile("io.jsonwebtoken:jjwt:0.9.0")
